--- a/TP1_Bandit_Gerretsen_Mitjans.ipynb
+++ b/TP1_Bandit_Gerretsen_Mitjans.ipynb
@@ -292,7 +292,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -317,6 +319,31 @@
     "all_cumulativeregrets = xps.OneBanditNLearnersNRuns(bandit, learners, timeHorizon, n)\n",
     "xps.plotOneBanditNLearnersNRuns(all_cumulativeregrets,learners)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## III) Other UCB algorithms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
